--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -377,7 +377,11 @@ jobs:
     needs: load-deployment-config
 
     env:
+      ENVIRONMENT: ${{ inputs.environment }}
       CLINICSDATA: "clinicsData.dynamoDB.${{ inputs.environment }}.json"
+      WORKDIR: "pets-core-services/src/clinic-service"
+      JSONCLINICSDATA: "pets-core-services/src/clinic-service/clinicsData.json"
+      CLINIC_SERVICE_DATABASE_NAME: ${{ vars.CLINIC_SERVICE_DATABASE_NAME }}
 
     steps:
       - name: Configure AWS credentials
@@ -389,9 +393,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Check environment
-        run: echo ${{ inputs.environment }}
+      - name: Setting up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install Python library (boto3)
+        run: python -m pip install boto3
+
+      - name: Run conversion/validation script
+        run: python scripts/convert_json_to_dynamodbjson.py
 
       - name: Executing batch-write-item
-        working-directory: pets-core-services/src/clinic-service
+        working-directory: $WORKDIR
         run: aws dynamodb batch-write-item --request-items file://$CLINICSDATA
