--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -406,4 +406,7 @@ jobs:
 
       - name: Executing batch-write-item
         working-directory: "pets-core-services/src/clinic-service"
-        run: aws dynamodb batch-write-item --request-items file://$CLINICSDATA
+        run: |
+          aws dynamodb batch-write-item --request-items file://clinicsData.dynamoDB.${{ inputs.environment }}.json \
+            --return-consumed-capacity INDEXES \
+            --return-item-collection-metrics SIZE
