--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -404,6 +404,10 @@ jobs:
       - name: Run conversion/validation script
         run: python scripts/convert_json_to_dynamodbjson.py
 
+      - name: Printing out the new file
+        run: cat $CLINICSDATA
+        working-directory: "pets-core-services/src/clinic-service"
+
       - name: Executing batch-write-item
         working-directory: "pets-core-services/src/clinic-service"
         run: |
