--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -53,6 +53,9 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "jsdom": "^25.0.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.2.0",
     "msw": "^2.6.6",
     "vite": "^5.4.12",
     "vite-tsconfig-paths": "^5.1.2"
