--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -166,7 +166,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: mochawesome-report
+          name: mochawesome-reportmochawesome-report-${{ matrix.browser }}
           path: pets-ui/cypress/reports/mochawesome/
 
 
