Fix issue with app not running locally after macos update: - update localstack image to 4.3.0 - lock aws-sdk packages to versions 3.787 & 3.788

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 services:
-    localstack:
-        image: localstack/localstack:4.0.3
-        ports:
-            - '127.0.0.1:4566:4566' # LocalStack Gateway
-        environment:
-            # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
-            - DEBUG=${DEBUG:-0}
-            - DYNAMODB_IN_MEMORY=1
-            - LAMBDA_DOCKER_FLAGS=-e LOCALSTACK_FILE_WATCHER_STRATEGY=polling
+  localstack:
+    image: localstack/localstack:4.3.0
+    ports:
+      - "127.0.0.1:4566:4566" # LocalStack Gateway
+    environment:
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - DEBUG=${DEBUG:-0}
+      - DYNAMODB_IN_MEMORY=1
+      - LAMBDA_DOCKER_FLAGS=-e LOCALSTACK_FILE_WATCHER_STRATEGY=polling
 
-        volumes:
-            - './.localstack-data:/var/lib/localstack'
-            - '/var/run/docker.sock:/var/run/docker.sock'
+    volumes:
+      - "./.localstack-data:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
