--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -4,11 +4,11 @@
   "version": "1.0.0",
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.0",
-    "@aws-sdk/client-dynamodb": "^3.758.0",
-    "@aws-sdk/client-lambda": "^3.758.0",
-    "@aws-sdk/client-s3": "^3.758.0",
-    "@aws-sdk/lib-dynamodb": "^3.758.0",
-    "@aws-sdk/s3-presigned-post": "^3.758.0",
+    "@aws-sdk/client-dynamodb": "3.788.0",
+    "@aws-sdk/client-lambda": "3.787.0",
+    "@aws-sdk/client-s3": "3.787.0",
+    "@aws-sdk/lib-dynamodb": "3.788.0",
+    "@aws-sdk/s3-presigned-post": "3.787.0",
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
     "aws-jwt-verify": "^5.0.0",
