--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/swagger-ui-react": "^5.18.0",
     "axios": "^1.8.3",
+    "dicom-parser": "^1.8.21",
     "govuk-frontend": "^5.7.1",
     "msal-react-tester": "^0.3.1",
     "react": "^18.3.1",
