--- a/.github/workflows/nightlyCypressRuns.yaml
+++ b/.github/workflows/nightlyCypressRuns.yaml
@@ -8,21 +8,12 @@ on:
 
 jobs:
   cypress-nightly:
-    name: Run Nightly Cypress Tests
+    name: Run Nightly Cypress Tests - ${{ matrix.browser }}
     runs-on: ubuntu-latest
     strategy:
       # Don't fail fast - run all tests even if some fail
       fail-fast: false
       matrix:
-        # Define the specific test files to run
-        spec:
-          - pets-ui/cypress/e2e/TBBETA-824-TC01-applicantDetailsErrorTest.cy.ts
-          - pets-ui/cypress/e2e/TBBETA-824-TC02-applicantDetailsErrorTest.cy.ts
-          - pets-ui/cypress/e2e/TBBETA-824-TC03-applicantDetailsErrorTest.cy.ts
-          - pets-ui/cypress/e2e/TBBETA-824-TC04-applicantDetailsErrorTest.cy.ts
-          - pets-ui/cypress/e2e/TBBETA-824-new-e2e-test.cy.ts
-          - pets-ui/cypress/e2e/TBBETA-875-dateInputTypeTest.cy.ts
-
         browser: [chrome, firefox, edge]
 
     env:
@@ -84,10 +75,9 @@ jobs:
           install: false
           working-directory: pets-ui
           browser: ${{ matrix.browser }}
-          spec: ${{ matrix.spec }}
           config-file: cypress/cypress.config.mjs
 
-      - name: Retry failed tests
+      - name: Retry if failed
         if: steps.initial_attempt.outcome != 'success'
         uses: cypress-io/github-action@v6
         id: retry_attempt
@@ -95,14 +85,13 @@ jobs:
           install: false
           working-directory: pets-ui
           browser: ${{ matrix.browser }}
-          spec: ${{ matrix.spec }}
           config-file: cypress/cypress.config.mjs
 
       - name: Upload Failed Tests Screenshots
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: nightly-failed-${{ matrix.spec }}-${{ matrix.browser }}
+          name: nightly-failed-screenshots-${{ matrix.browser }}
           path: pets-ui/cypress/screenshots
           retention-days: 7
 
@@ -111,7 +100,7 @@ jobs:
         run: |
           JSON_DIR=pets-ui/cypress/reports/mochawesome/.jsons
           if ls ${JSON_DIR}/*.json 1> /dev/null 2>&1; then
-            npx mochawesome-merge ${JSON_DIR}/*.json > pets-ui/cypress/reports/mochawesome/mochawesome-${{ matrix.spec }}.json
+            npx mochawesome-merge ${JSON_DIR}/*.json > pets-ui/cypress/reports/mochawesome/mochawesome.json
           else
             echo "No mochawesome JSON files found. Skipping merge."
           fi
@@ -120,30 +109,9 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: nightly-report-${{ matrix.spec }}-${{ matrix.browser }}
+          name: nightly-mochawesome-report-${{ matrix.browser }}
           path: pets-ui/cypress/reports/mochawesome/
           retention-days: 7
-
-      # Add test status to GitHub Step Summary
-      - name: Set test status
-        if: always()
-        id: status
-        run: |
-          if [ "${{ steps.retry_attempt.outcome }}" = "success" ] || [ "${{ steps.initial_attempt.outcome }}" = "success" ]; then
-            echo "test_status=success" >> $GITHUB_OUTPUT
-            echo "## ✅ Test Passed" >> $GITHUB_STEP_SUMMARY
-            echo "Test for ${{ matrix.spec }} passed" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "test_status=failure" >> $GITHUB_OUTPUT
-            echo "## ❌ Test Failed" >> $GITHUB_STEP_SUMMARY
-            echo "Test for ${{ matrix.spec }} failed" >> $GITHUB_STEP_SUMMARY
-            
-            # Add screenshot links if available
-            if [ -d "pets-ui/cypress/screenshots" ]; then
-              echo "### Screenshots:" >> $GITHUB_STEP_SUMMARY
-              echo "Screenshots are available in the artifacts" >> $GITHUB_STEP_SUMMARY
-            fi
-          fi
 
   generate-summary:
     name: Generate Test Summary
@@ -163,43 +131,66 @@ jobs:
       - name: Generate test summary report
         id: summary
         run: |
-          echo "# Nightly Cypress Test Results" > nightly-summary.md
-          echo "Run completed at $(date)" >> nightly-summary.md
+          echo "# 🌙 Nightly Cypress Test Results" > nightly-summary.md
+          echo "**Run Date**: $(date)" >> nightly-summary.md
+          echo "**Run ID**: ${{ github.run_id }}" >> nightly-summary.md
           echo "" >> nightly-summary.md
 
-          # Count test specs - update to match the actual number of specs
-          TOTAL_SPECS=5
+          # Initialize counters
+          TOTAL_BROWSERS=3
+          FAILED_BROWSERS=0
 
-          # Calculate results
-          FAILED_SPECS=$(find all-artifacts -name "*.png" -o -name "*.jpg" | grep -v "nightly-report" | wc -l)
-          if [ $FAILED_SPECS -gt 0 ]; then
-            FAILED=true
-            echo "## ❌ Failed Tests Found" >> nightly-summary.md
-            echo "status=failed" >> $GITHUB_OUTPUT
-          else
-            FAILED=false
-            echo "## ✅ All Tests Passed" >> nightly-summary.md
-            echo "status=passed" >> $GITHUB_OUTPUT
-          fi
-
+          echo "## Browser Test Results" >> nightly-summary.md
           echo "" >> nightly-summary.md
-          echo "### Test Specs" >> nightly-summary.md
+          echo "| Browser | Status | Screenshots |" >> nightly-summary.md
+          echo "|---------|--------|-------------|" >> nightly-summary.md
 
-          # List test specs and their status - More reliable detection pattern
-          for TEST_FILE in "TBBETA-824-TC01-applicantDetailsErrorTest.cy.ts" "TBBETA-824-TC02-applicantDetailsErrorTest.cy.ts" "TBBETA-824-TC03-applicantDetailsErrorTest.cy.ts" "TBBETA-824-TC04-applicantDetailsErrorTest.cy.ts" "TBBETA-824-new-e2e-test.cy.ts"; do
-            # Using find to look for screenshots that would indicate failure
-            if find all-artifacts -path "*$TEST_FILE*" -name "*.png" | grep -q .; then
-              echo "- $TEST_FILE - ❌ Failed" >> nightly-summary.md
+          # Check each browser result
+          for browser in chrome firefox edge; do
+            SCREENSHOT_DIR="all-artifacts/nightly-failed-screenshots-$browser"
+            if [ -d "$SCREENSHOT_DIR" ] && [ "$(ls -A $SCREENSHOT_DIR 2>/dev/null)" ]; then
+              SCREENSHOT_COUNT=$(find "$SCREENSHOT_DIR" -name "*.png" -o -name "*.jpg" | wc -l)
+              echo "| $browser | ❌ Failed | $SCREENSHOT_COUNT failure(s) |" >> nightly-summary.md
+              ((FAILED_BROWSERS++))
             else
-              echo "- $TEST_FILE - ✅ Passed" >> nightly-summary.md
+              echo "| $browser | ✅ Passed | - |" >> nightly-summary.md
             fi
           done
 
-          if [ "$FAILED" = true ]; then
+          echo "" >> nightly-summary.md
+
+          # Overall status
+          if [ $FAILED_BROWSERS -eq 0 ]; then
+            echo "## ✅ Overall Status: PASSED" >> nightly-summary.md
+            echo "All browser tests completed successfully!" >> nightly-summary.md
+            echo "status=passed" >> $GITHUB_OUTPUT
+          else
+            echo "## ❌ Overall Status: FAILED" >> nightly-summary.md
+            echo "$FAILED_BROWSERS out of $TOTAL_BROWSERS browser(s) have failing tests." >> nightly-summary.md
+            echo "status=failed" >> $GITHUB_OUTPUT
+            
+            # List failed screenshots
             echo "" >> nightly-summary.md
-            echo "### Failure Details" >> nightly-summary.md
-            find all-artifacts -name "*.png" -o -name "*.jpg" | grep -v "nightly-report" | sort >> nightly-summary.md
+            echo "### Failed Test Details" >> nightly-summary.md
+            echo "" >> nightly-summary.md
+            for browser in chrome firefox edge; do
+              SCREENSHOT_DIR="all-artifacts/nightly-failed-screenshots-$browser"
+              if [ -d "$SCREENSHOT_DIR" ] && [ "$(ls -A $SCREENSHOT_DIR 2>/dev/null)" ]; then
+                echo "#### $browser failures:" >> nightly-summary.md
+                find "$SCREENSHOT_DIR" -name "*.png" -o -name "*.jpg" | while read screenshot; do
+                  echo "- $(basename "$screenshot")" >> nightly-summary.md
+                done
+                echo "" >> nightly-summary.md
+              fi
+            done
           fi
+
+          # Add links
+          echo "" >> nightly-summary.md
+          echo "---" >> nightly-summary.md
+          echo "📊 [View Full Test Report](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> nightly-summary.md
+          echo "" >> nightly-summary.md
+          echo "💾 Test artifacts (screenshots, reports) are available in the workflow run artifacts." >> nightly-summary.md
 
           # Add to GitHub step summary
           cat nightly-summary.md >> $GITHUB_STEP_SUMMARY
@@ -211,15 +202,13 @@ jobs:
           path: nightly-summary.md
           retention-days: 7
 
-      # Set final workflow conclusion
+      # Set final workflow status
       - name: Set workflow conclusion
         if: always()
         run: |
           if [[ "${{ steps.summary.outputs.status }}" == "passed" ]]; then
-            echo "## ✅ Nightly Test Run Successful" >> $GITHUB_STEP_SUMMARY
-            echo "All tests have passed successfully." >> $GITHUB_STEP_SUMMARY
+            echo "::notice::✅ All nightly tests passed successfully!"
           else
-            echo "## ❌ Nightly Test Run Failed" >> $GITHUB_STEP_SUMMARY
-            echo "Some tests have failed. Please check the artifacts for details." >> $GITHUB_STEP_SUMMARY
-            echo "View run details: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_STEP_SUMMARY
+            echo "::error::❌ Some nightly tests failed. Check the summary report for details."
+            exit 1
           fi
