Workaround for local environment

--- a/configs/.env
+++ b/configs/.env
@@ -1,4 +1,5 @@
 ENVIRONMENT=local
+VITE_ENVIRONMENT=local
 AWS_ENDPOINT_URL=http://127.0.0.1:4566
 AWS_ACCOUNT_ID=000000000000
 AWS_ACCESS_KEY_ID=foobar
