--- a/configs/.env.prod
+++ b/configs/.env.prod
@@ -1,4 +1,5 @@
 ENVIRONMENT=prod
+VITE_ENVIRONMENT=prod
 CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
 CLINIC_SERVICE_LAMBDA_BUCKET=aw-pets-euw-prod-s3-clinicservicelambda
 CLINIC_SERVICE_DATABASE_NAME=clinics-details
