--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -20,8 +20,10 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
+    "@types/jsonwebtoken": "^9.0.10",
     "aws-sdk-client-mock": "^4.1.0",
     "esbuild": "^0.25.1",
+    "jsonwebtoken": "^9.0.2",
     "tsx": "^4.19.2",
     "typescript": "5.5.4",
     "typescript-transform-paths": "3.4.7",
