--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -13,6 +13,8 @@
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
     "aws-jwt-verify": "^5.0.0",
+    "aws-xray-sdk": "^3.10.1",
+    "clean-deep": "^3.4.0",
     "pino": "^9.6.0",
     "pino-lambda": "^4.4.1",
     "pino-pretty": "^13.0.0",
