initial changes (TBBETA-1104)

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -13,7 +13,7 @@ AWS_ACCOUNT_ID=000000000000
 API_GATEWAY_ID=TEST_API_GATEWAY_ID
 
 LOG_LEVEL=fatal # fatal | error | debug | info
-TZ = 'UTC'
+TZ='UTC'
 QUARANTINE_BUCKET=QUARANTINE_BUCKET
 DICOM_IMAGE_BUCKET=DICOM_IMAGE_BUCKET
 SSE_KEY_ID=SSE_KEY_ID
@@ -22,3 +22,6 @@ VITE_MSAL_TENANT_ID=TEST_TENANT_ID
 VITE_AUTH_ENDPOINT_URI=TEST_ENDPOINT
 VITE_AZURE_SKIP_TOKEN_ACQUISITION=true
 IMAGE_BUCKET=IMAGE_BUCKET
+INTEGRATION_SERVICE_LAMBDA_NAME=integration-service-lambda
+INTEGRATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-edap-integrationlambda
+INTEGRATION_SERVICE_QUEUE_NAME=integration-service-queue
