--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -7,17 +7,21 @@
     "@aws-sdk/client-dynamodb": "3.788.0",
     "@aws-sdk/client-lambda": "3.787.0",
     "@aws-sdk/client-s3": "3.787.0",
+    "@aws-sdk/client-sqs": "3.787.0",
     "@aws-sdk/lib-dynamodb": "3.788.0",
     "@aws-sdk/s3-presigned-post": "3.787.0",
     "@aws-sdk/s3-request-presigner": "3.787.0",
+    "@aws-sdk/util-dynamodb": "3.788.0",
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
+    "@smithy/smithy-client": "^3.7.0",
     "aws-jwt-verify": "^5.0.0",
     "aws-xray-sdk": "^3.10.1",
     "clean-deep": "^3.4.0",
     "pino": "^9.6.0",
     "pino-lambda": "^4.4.1",
     "pino-pretty": "^13.0.0",
+    "reflect-metadata": "0.2.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
