Feature/TBBETA-100 Clinic service update (#404)
* add /clinics/active endpoint

Modified/extended schema, added Clinic model,
added new 'path' to 'routes' and added seed data.

* add isActiveClinic endpoint

This endpoint returns boolean value according to TBBETA-100 task

* add tests and improve Clinic class methods

isActiveClinic method uses QueryCommand instead of ScanCommand
which in theory should be faster

* add more tests for clinic-service

Also some improvements added to the code

* add reading json file

Clinics are read from a file, added validation.

* add tests for JSON->DB conversion code (clinic)

* remove .skip in 3 clinic lambda tests

* add more test for clinic-service

Also done some improvements to the service code

* fix test

Added one more test as well

* add more tests (clinic) and improve existing ones

* add workflow to autopopulate db

Added json file with clinics data

* move workflow changes to the right file

* modify workflow (clinics), add dynamodb json file

Workflow modification (1), added dynamodb json file with clinics data.

* modify workflow (clinics data)

Workflow improvements (2)

* remove unneeded workflow entry (clinics data)

Workflow modification (3)

* update clinics table name in clinics data file

* remove incorrect data from clinics data file

* add pk & sk to clinics data

* add conversion/validation python script

The script will convert Clinics data in plain JSON to DynamoDB JSON format.
Also it will validate the data and ignore all incorrect clinic objects.

* fix JSONCLINICSDATA value in workflow script

* change working-directory value in workflow

* modify aws batch-write-item command in workflow

* add checking new file data

* minor improvements

Output of the newly created file is limited to 20 lines,
that shoul be enough to check if it's created OK.
Removed file that's dynamically created during workflow script run.
Just in cave any file in python environment (ve) are ignored
(added entry to .gitignore fil

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -369,3 +369,49 @@ jobs:
             })
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  populate-dynamodb-with-clinics-data:
+    name: Read data from JSON file and save Clinics to DynamoDB
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+    timeout-minutes: 5
+    needs: load-deployment-config
+
+    env:
+      ENVIRONMENT: ${{ inputs.environment }}
+      CLINICSDATA: "clinicsData.dynamoDB.${{ inputs.environment }}.json"
+      WORKDIR: "pets-core-services/src/clinic-service"
+      JSONCLINICSDATA: "clinicsData.json"
+      CLINIC_SERVICE_DATABASE_NAME: ${{ vars.CLINIC_SERVICE_DATABASE_NAME }}
+
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: "eu-west-2"
+          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE_NAME }}"
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setting up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install Python library (boto3)
+        run: python -m pip install boto3
+
+      - name: Run conversion/validation script
+        run: python scripts/convert_json_to_dynamodbjson.py
+
+      - name: Printing out the new file
+        run: awk 'NR<20' $CLINICSDATA && echo ...
+        working-directory: "pets-core-services/src/clinic-service"
+
+      - name: Executing batch-write-item
+        working-directory: "pets-core-services/src/clinic-service"
+        run: |
+          aws dynamodb batch-write-item --request-items file://clinicsData.dynamoDB.${{ inputs.environment }}.json \
+            --return-consumed-capacity INDEXES \
+            --return-item-collection-metrics SIZE
