--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -2,6 +2,7 @@ ENVIRONMENT=TEST_LOCAL
 VITE_ENVIRONMENT=TEST_LOCAL
 APPLICANT_SERVICE_DATABASE_NAME=test-applicant-details
 APPLICATION_SERVICE_DATABASE_NAME=test-application-details
+CLINIC_SERVICE_DATABASE_NAME=test-clinic-details
 PASSPORT_ID_INDEX=applicant-db-passport-index
 AUTHORISER_LAMBDA_NAME=test-lambda-name
 AWS_ENDPOINT_URL=http://127.0.0.1:4566
@@ -13,7 +14,7 @@ AWS_ACCOUNT_ID=000000000000
 API_GATEWAY_ID=TEST_API_GATEWAY_ID
 
 LOG_LEVEL=fatal # fatal | error | debug | info
-TZ = 'UTC'
+TZ='UTC'
 QUARANTINE_BUCKET=QUARANTINE_BUCKET
 DICOM_IMAGE_BUCKET=DICOM_IMAGE_BUCKET
 SSE_KEY_ID=SSE_KEY_ID
