--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -25,4 +25,4 @@ VITE_AZURE_SKIP_TOKEN_ACQUISITION=true
 IMAGE_BUCKET=IMAGE_BUCKET
 VITE_ALLOWED_TENANT_IDS=f52ae62b-2ff7-4104-b90f-48cdc7454bfb,ee4e1499-4a35-4b2e-ad47-5f3cf9de8666
 VITE_ALLOWED_CLIENT_IDS=b00ce845-b38f-43bc-bb44-359c9cd1b819,fd415a55-ca78-4926-84bc-782fab6411b4
-VITE_ROLE_MAP='{"b00ce845-b38f-43bc-bb44-359c9cd1b819": ["Application.Write", "Application.Read","Applicants.Write","Applicants.Read", "Clinics.Read", "Imaging.Write" ], "fd415a55-ca78-4926-84bc-782fab6411b4": ["QualityReview.Read", "QualityReview.Write"]}'
+VITE_ROLE_MAP={"b00ce845-b38f-43bc-bb44-359c9cd1b819": ["Application.Write", "Application.Read","Applicants.Write","Applicants.Read", "Clinics.Read", "Imaging.Write" ], "fd415a55-ca78-4926-84bc-782fab6411b4": ["QualityReview.Read", "QualityReview.Write"]}
