--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.2.1",
     "@azure/msal-react": "^3.0.4",
+    "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/swagger-ui-react": "^5.18.0",
     "axios": "^1.8.3",
