add EDAP Integration DLQ
Added DLQ to localstack

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -26,3 +26,4 @@ IMAGE_BUCKET=IMAGE_BUCKET
 INTEGRATION_SERVICE_LAMBDA_NAME=edap-integration-lambda
 INTEGRATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-edap-integrationlambda
 INTEGRATION_SERVICE_QUEUE_NAME=integration-service-queue
+INTEGRATION_SERVICE_DLQ_NAME=integration-service-dlq
