--- a/configs/.env
+++ b/configs/.env
@@ -23,3 +23,4 @@ SSE_KEY_ID=dummy_key_id
 INTEGRATION_SERVICE_LAMBDA_NAME=edap-integration-lambda
 INTEGRATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-edap-integrationlambda
 INTEGRATION_SERVICE_QUEUE_NAME=integration-service-queue
+INTEGRATION_SERVICE_DLQ_NAME=integration-service-dlq
