--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -194,8 +194,16 @@ jobs:
           path: all-artifacts
           pattern: "*"
 
+      - name: Debug artifacts structure
+        run: |
+          echo "=== Artifacts Structure ==="
+          find all-artifacts -type f -name "*.txt" | head -20
+          echo "=== Sample result file ==="
+          find all-artifacts -name "*result.txt" | head -1 | xargs cat || echo "No result files found"
+
       - name: Generate test summary report
         id: summary
+        shell: bash
         run: |
           echo "# 🌙 Nightly Cypress Test Results" > nightly-summary.md
           echo "**Run Date**: $(date)" >> nightly-summary.md
@@ -212,15 +220,25 @@ jobs:
           echo "| Browser | QAT | DEV | PREPROD |" >> nightly-summary.md
           echo "|---------|-----|-----|---------|" >> nightly-summary.md
 
-          # Initialize status variables for JSON
-          declare -A STATUSES
-          ENVIRONMENTS=("qat" "dev" "preprod")
-          BROWSERS=("chrome" "firefox" "edge")
+          # Use regular variables instead of associative arrays
+          ENVIRONMENTS="qat dev preprod"
+          BROWSERS="chrome firefox edge"
+
+          # Initialize status variables
+          chrome_qat_status="UNKNOWN"
+          chrome_dev_status="UNKNOWN"
+          chrome_preprod_status="UNKNOWN"
+          firefox_qat_status="UNKNOWN"
+          firefox_dev_status="UNKNOWN"
+          firefox_preprod_status="UNKNOWN"
+          edge_qat_status="UNKNOWN"
+          edge_dev_status="UNKNOWN"
+          edge_preprod_status="UNKNOWN"
 
           # Check each combination result
-          for browser in "${BROWSERS[@]}"; do
+          for browser in $BROWSERS; do
             ROW="| $browser |"
-            for env in "${ENVIRONMENTS[@]}"; do
+            for env in $ENVIRONMENTS; do
               RESULT_FILE="all-artifacts/browser-result-$browser-$env/${browser}-${env}-result.txt"
               SCREENSHOT_DIR="all-artifacts/nightly-failed-screenshots-$browser-$env"
               
@@ -230,12 +248,12 @@ jobs:
                 RESULT="UNKNOWN"
               fi
               
-              # Store status for JSON
-              STATUSES["${browser}_${env}"]="$RESULT"
+              # Store status using eval to create dynamic variable names
+              eval "${browser}_${env}_status=\"$RESULT\""
               
               if [ "$RESULT" = "FAIL" ]; then
-                ((FAILED_COMBINATIONS++))
-                if [ -d "$SCREENSHOT_DIR" ] && [ "$(ls -A $SCREENSHOT_DIR 2>/dev/null)" ]; then
+                FAILED_COMBINATIONS=$((FAILED_COMBINATIONS + 1))
+                if [ -d "$SCREENSHOT_DIR" ] && [ "$(ls -A "$SCREENSHOT_DIR" 2>/dev/null)" ]; then
                   SCREENSHOT_COUNT=$(find "$SCREENSHOT_DIR" -name "*.png" -o -name "*.jpg" | wc -l)
                   ROW="$ROW ❌ ($SCREENSHOT_COUNT) |"
                   FAILED_TESTS=$((FAILED_TESTS + SCREENSHOT_COUNT))
@@ -273,10 +291,11 @@ jobs:
           echo "success_rate=${SUCCESS_RATE}%" >> $GITHUB_OUTPUT
           echo "failed_combinations=$FAILED_COMBINATIONS" >> $GITHUB_OUTPUT
 
-          # Set individual statuses
-          for browser in "${BROWSERS[@]}"; do
-            for env in "${ENVIRONMENTS[@]}"; do
-              echo "${browser}_${env}_status=${STATUSES["${browser}_${env}"]}" >> $GITHUB_OUTPUT
+          # Set individual statuses using eval to read dynamic variable names
+          for browser in $BROWSERS; do
+            for env in $ENVIRONMENTS; do
+              eval "status=\$${browser}_${env}_status"
+              echo "${browser}_${env}_status=$status" >> $GITHUB_OUTPUT
             done
           done
 
@@ -286,6 +305,7 @@ jobs:
           cp .github/pages/index.html dashboard/ || echo "index.html not found, will create default"
 
       - name: Generate dashboard data JSON
+        shell: bash
         run: |
           cat > dashboard/test-results.json << EOF
           {
