--- a/pets-ui/cypress/tsconfig.json
+++ b/pets-ui/cypress/tsconfig.json
@@ -14,6 +14,7 @@
     },
     "include": [
       "**/*.ts",
-      "../src/utils/countryList.ts"
+      "../src/utils/countryList.ts",
+      "support/**/*.d.ts"
     ]
   }
