--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -23,3 +23,7 @@ VITE_MSAL_TENANT_ID=TEST_TENANT_ID
 VITE_AUTH_ENDPOINT_URI=TEST_ENDPOINT
 VITE_AZURE_SKIP_TOKEN_ACQUISITION=true
 IMAGE_BUCKET=IMAGE_BUCKET
+EDAP_INTEGRATION_LAMBDA_NAME=edap-integration-lambda
+EDAP_INTEGRATION_LAMBDA_BUCKET=aw-pets-euw-dev-s3-edap-integrationlambda
+EDAP_INTEGRATION_QUEUE_NAME=sqs-edap-integration
+EDAP_INTEGRATION_DLQ_NAME=sqs-edap-integration-dlq
